--- a/Web/dbtaskboardgames/docker-compose-db.yml
+++ b/Web/dbtaskboardgames/docker-compose-db.yml
@@ -5,17 +5,17 @@ services:
       - ./dbfiles:/var/lib/mysql
     env_file:
       - ./build/db/db.env
-  # adminer:
-  #   image: docker.io/adminer:latest
-  #   ports:
-  #     - 8081:8080
+  adminer:
+    image: docker.io/adminer:latest
+    ports:
+      - 8081:8080
   phpmyadmin:
     image: docker.io/phpmyadmin:apache
     ports:
       - 8080:80
-  # web:
-  #   build: ./build/php
-  #   volumes:
-  #     - .:/var/www/html/
-  #   ports:
-  #     - 80:80
+  web:
+    build: ./build/php
+    volumes:
+      - .:/var/www/html/
+    ports:
+      - 80:80
