--- a/Web/dbtaskboardgames/docker-compose-db.yml
+++ b/Web/dbtaskboardgames/docker-compose-db.yml
@@ -5,10 +5,10 @@ services:
       - ./dbfiles:/var/lib/mysql
     env_file:
       - ./build/db/db.env
-  adminer:
-    image: docker.io/adminer:latest
-    ports:
-      - 8081:8080
+  # adminer:
+  #   image: docker.io/adminer:latest
+  #   ports:
+  #     - 8081:8080
   phpmyadmin:
     image: docker.io/phpmyadmin:apache
     ports:
@@ -16,6 +16,6 @@ services:
   web:
     build: ./build/php
     volumes:
-      - .:/var/www/html/
+      - ./src/:/var/www/html/
     ports:
-      - 80:80
+      - 8082:80
