--- a/Web/dbtaskboardgames/package.json
+++ b/Web/dbtaskboardgames/package.json
@@ -2,15 +2,16 @@
   "name": "dbtaskboardgames",
   "version": "1.0.0",
   "description": "",
+  "private": "true",
   "scripts": {
     "css-lint": "stylelint src/scss/",
     "css-prefix": "postcss --replace dist/*.css --use autoprefixer --map",
     "css-purge": "purgecss --keyframes --css dist/*.css --content dist/*.html --content dist/*.js --output dist/",
     "css": "run-s css-prefix css-purge css-lint",
-    "start": "parcel serve --dist-dir 'dev/' './src/php/*.php'",
+    "start": "webpack serve",
     "preparcel-build": "./.bin/preparcel-build",
     "parcel-build": "parcel build --no-optimize --no-content-hash --dist-dir 'dist/' './src/php/*.php'",
-    "build": "run-s parcel-build css",
+    "build": "webpack",
     "gh-pages-push": "git subtree push --prefix dist origin gh-pages",
     "gh-pages-subtree-create": "git subtree split --prefix dist --branch gh-pages"
   },
@@ -21,21 +22,23 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "2.0.0-beta.3.1",
-    "@parcel/transformer-pug": "2.0.0-beta.3.1",
-    "@parcel/transformer-sass": "2.0.0-beta.3.1",
-    "@parcel/transformer-webmanifest": "2.0.0-beta.3.1",
     "@prettier/plugin-pug": "^1.15.2",
     "autoprefixer": "^10.2.5",
+    "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.1",
     "npm-run-all": "^4.1.5",
-    "parcel": "2.0.0-beta.3.1",
     "postcss": "^8.2.8",
     "postcss-cli": "^8.3.1",
     "purgecss": "^4.0.2",
-    "sass": "^1.32.12",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.12.0",
     "stylelint-config-twbs-bootstrap": "^2.1.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "webpack": "^5.39.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "repository": {
     "type": "git",
